2007-03-05 [iwkse]	0.2.0cvs35

	* src/poppler_viewer.c
			Remove useless widgets.
			A better index layout

2007-03-05 [iwkse]	0.2.0cvs34

	* src/poppler_viewer.c
			fix toggle button state on a new document view

2007-03-05 [iwkse]	0.2.0cvs33

	* src/Makefile.am
	* src/poppler_viewer.c
			A close button is removed
			Added a toggle button

2007-03-05 [iwkse]	0.2.0cvs32

	* src/Makefile.am
	* src/poppler_viewer.c
			close button removed
			Added a toggle button

2007-03-05 [iwkse]	0.2.0cvs31

	* src/Makefile.am
			no comment.

2007-03-05 [iwkse]	0.2.0cvs30

	* src/Makefile.am
			Fixed Alphabetical order
			I know, i'm not so `ordered`

2007-03-05 [iwkse]	0.2.0cvs29

	* src/poppler_viewer.c
			fix indentation

2007-03-05 [iwkse]	0.2.0cvs28

	* src/poppler_viewer.c
	* src/doc_index.xpm
	* src/doc_index_close.xpm
	* src/Makefile.am
		added buttons & icons
		added control for pdf index
		rearrange buttons adding more separators..
		some other minor changes.

2007-03-03 [paul]	0.2.0cvs27

	* src/Makefile.am
		fix 'make dist' and put the
		entries in alphabetical order

2007-03-03 [colin]	0.2.0cvs26

	* src/Makefile.am
		Fix dist

2007-03-03 [paul]	0.2.0cvs25

	* src/poppler_viewer.c
		add missing tooltip

2007-03-03 [iwkse]	0.2.0cvs24

	* src/poppler_viewer.c
		fix poppler_show_controls with new pixmaps

2007-03-03 [iwkse]	0.2.0cvs23

	* src/first_arrow.xpm
	* src/last_arrow.xpm
	* src/poppler_viewer.c
		added icons for first page and last page

2007-03-03 [iwkse]	0.2.0cvs22

	* src/poppler_viewer.c
	    comment out unused functions
	    add a newline in info window

2007-03-03 [iwkse]	0.2.0cvs21

	* src/poppler_viewer.c
		comment useless fields(for now)

2007-03-03 [iwkse]	0.2.0cvs20

	* src/poppler_viewer.c
		fixed showing button on wrong document

2007-03-03 [wwp]	0.2.0cvs19

	* src/poppler_viewer.c
		#undef macro after use, fix initial table rows number.

2007-03-03 [wwp]	0.2.0cvs18

	* src/poppler_viewer.c