@@ -1,3 +1,9 @@
+2007-03-06 [wwp]	0.2.0cvs36
+
+	* src/poppler_viewer.c
+		Rework the button bar into a gtk_table.
+		Factorize code a bit using macros.
+
 2007-03-05 [iwkse]	0.2.0cvs35
 
 	* src/poppler_viewer.c
